--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -6,6 +6,7 @@ html {
   align-items: center;
 }
 .wrapper {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-color: white;
